--- a/modules/vectorfieldvisualization/CMakeLists.txt
+++ b/modules/vectorfieldvisualization/CMakeLists.txt
@@ -24,6 +24,7 @@ set(HEADER_FILES
     include/modules/vectorfieldvisualization/processors/flowfieldprocessor.h
     include/modules/vectorfieldvisualization/processors/integrallinetracerprocessor.h
     include/modules/vectorfieldvisualization/processors/integrallinevectortomesh.h
+    include/modules/vectorfieldvisualization/processors/linesfromdataframe.h
     include/modules/vectorfieldvisualization/processors/linesourceascii.h
     include/modules/vectorfieldvisualization/processors/seed3dto4d.h
     include/modules/vectorfieldvisualization/processors/seedsfrommasksequence.h
@@ -32,6 +33,7 @@ set(HEADER_FILES
     include/modules/vectorfieldvisualization/properties/integrallineproperties.h
     include/modules/vectorfieldvisualization/properties/pathlineproperties.h
     include/modules/vectorfieldvisualization/properties/streamlineproperties.h
+    include/modules/vectorfieldvisualization/util/linemetrics.h
     include/modules/vectorfieldvisualization/util/unsteadyspatialsampler.h
     include/modules/vectorfieldvisualization/vectorfieldvisualizationmodule.h
     include/modules/vectorfieldvisualization/vectorfieldvisualizationmoduledefine.h
@@ -57,6 +59,7 @@ set(SOURCE_FILES
     src/processors/discardshortlines.cpp
     src/processors/flowfieldprocessor.cpp
     src/processors/integrallinevectortomesh.cpp
+    src/processors/linesfromdataframe.cpp
     src/processors/linesourceascii.cpp
     src/processors/seed3dto4d.cpp
     src/processors/seedsfrommasksequence.cpp
@@ -65,6 +68,7 @@ set(SOURCE_FILES
     src/properties/integrallineproperties.cpp
     src/properties/pathlineproperties.cpp
     src/properties/streamlineproperties.cpp
+    src/util/linemetrics.cpp
     src/util/unsteadyspatialsampler.cpp
     src/vectorfieldvisualizationmodule.cpp
 )
