--- a/modules/webbrowser/webhelper/resources/mac/helper-info.plist
+++ b/modules/webbrowser/webhelper/resources/mac/helper-info.plist
@@ -27,6 +27,8 @@
 	<true/>
 	<key>LSUIElement</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
 	<true/>
 </dict>
