--- a/ext/CRoaring/CRoaring/src/CMakeLists.txt
+++ b/ext/CRoaring/CRoaring/src/CMakeLists.txt
@@ -65,7 +65,8 @@ if(NOT MSVC)
 ## We output the library at the root of the current directory where cmake is invoked
 ## This is handy but Visual Studio will happily ignore us
 set_target_properties(${ROARING_LIB_NAME} PROPERTIES
-  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+  # Inviwo: Do not specify output directory to instead place lib files among all others
+  #LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
   VERSION ${ROARING_LIB_VERSION}
   SOVERSION ${ROARING_LIB_SOVERSION})
 MESSAGE( STATUS "Library output directory (does not apply to Visual Studio): " ${CMAKE_BINARY_DIR})
