--- a/src/qt/editor/CMakeLists.txt
+++ b/src/qt/editor/CMakeLists.txt
@@ -5,8 +5,6 @@ project(inviwo-qteditor)
 set(MOC_FILES
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/connectiondraghelper.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/consolewidget.h
-    ${IVW_INCLUDE_DIR}/inviwo/qt/editor/filetreemodel.h
-    ${IVW_INCLUDE_DIR}/inviwo/qt/editor/filetreewidget.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/linkdialog/linkdialogscene.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/linkdraghelper.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/networkeditor.h
@@ -14,6 +12,8 @@ set(MOC_FILES
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/processormimedata.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/welcomewidget.h
     ${IVW_INCLUDE_DIR}/inviwo/qt/editor/workspacegridview.h
+    ${IVW_INCLUDE_DIR}/inviwo/qt/editor/workspacetreemodel.h
+    ${IVW_INCLUDE_DIR}/inviwo/qt/editor/workspacetreeview.h
 )
 
 # Add header files
@@ -68,8 +68,6 @@ set(SOURCE_FILES
     dataopener.cpp
     editorgrapicsitem.cpp
     fileassociations.cpp
-    filetreemodel.cpp
-    filetreewidget.cpp
     helpwidget.cpp
     inviwoaboutwindow.cpp
     inviwoeditmenu.cpp
@@ -103,6 +101,8 @@ set(SOURCE_FILES
     welcomewidget.cpp
     workspaceannotationsqt.cpp
     workspacegridview.cpp
+    workspacetreemodel.cpp
+    workspacetreeview.cpp
 )
 if(TARGET inviwo::meta)
     list(APPEND SOURCE_FILES toolsmetamenu.cpp)
