Webbrowser: Create symlinks to CEF resources instead of copying files

--- a/modules/webbrowser/CMakeLists.txt
+++ b/modules/webbrowser/CMakeLists.txt
@@ -195,27 +195,25 @@ if (OS_MAC)
         VERBATIM
     )
     
-    
-    # Application does not seem to find the framework language files, so
-    # find and copy them to the Contents/Resource directory.
-    # This workaround duplicates the files, but no better solution has been found yet.
+    # Application does not seem to find the framework resource files, so
+    # find and create links to all framework resources from the bundle
+    # Contents/Resource directory.
     # See documentation about settings in cef_types.h:
     # "This value [locales_dir_path] is ignored on MacOS where pack files are always
     # loaded from the app bundle Resources directory"
-    # The language files are the same for debug/release, simply use release
+    # The files are the same for debug/release, simply use release
     # (file does not support generator expressions).
-    file(GLOB language_files LIST_DIRECTORIES TRUE "${_CEF_ROOT}/Release/Chromium Embedded Framework.framework/Resources/*")
-    # Extract ".proj" folders containing the language files
-    list(FILTER language_files INCLUDE REGEX ".*\.lproj")
-    # Copy to the Resource directory when the bundle has been created (after building)
-    foreach(cur_file ${language_files})
+    file(GLOB resource_files LIST_DIRECTORIES TRUE "${_CEF_ROOT}/Release/Chromium Embedded Framework.framework/Resources/*")
+    foreach(cur_file ${resource_files})
         get_filename_component(name ${cur_file} NAME)
         add_custom_command(
             TARGET inviwo-module-webbrowser
             POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_directory
-            "${cur_file}"
-            "${CEF_APP}/Contents/Resources/${name}"
+            WORKING_DIRECTORY "${CEF_APP}/Contents/Resources"
+            # Copy the CEF framework into the Frameworks directory.
+            COMMAND ${CMAKE_COMMAND} -E create_symlink
+            "../Frameworks/Chromium Embedded Framework.framework/Resources/${name}"
+            "${name}"
             VERBATIM
         )
     endforeach()
