--- a/modules/volume/CMakeLists.txt
+++ b/modules/volume/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SHADER_FILES
 ivw_group("Shader Files" ${SHADER_FILES})
 
 set(TEST_FILES
+    tests/unittests/volume-region-map-test.cpp
     tests/unittests/volume-unittest-main.cpp
 )
 ivw_add_unittest(${TEST_FILES})
@@ -31,3 +32,7 @@ ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
 
 # Add shader directory to install package
 #ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/glsl)
+
+if(IVW_TEST_BENCHMARKS)
+    add_subdirectory(tests/benchmarks)
+endif()
