--- a/modules/dataframeqt/CMakeLists.txt
+++ b/modules/dataframeqt/CMakeLists.txt
@@ -45,7 +45,7 @@ endif()
 source_group("MOC Files" FILES ${MOCED_FILES})
 
 # Create module
-ivw_create_module(NO_PCH ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
+ivw_create_module(NO_PCH QT ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
 target_link_libraries(inviwo-module-dataframeqt PRIVATE 
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Gui
