Core/Various: Update to Ports/Properties/Factories to use string_views
Properties and Ports should take identifiers and display names as string_views.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -627,6 +627,7 @@ set(SOURCE_FILES
     util/document.cpp
     util/enumtraits.cpp
     util/exception.cpp
+    util/factory.cpp
     util/filedialog.cpp
     util/fileextension.cpp
     util/filelogger.cpp
