Python: smart holders

--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -8,6 +8,7 @@ set(HEADER_FILES
     include/modules/python3/processors/numpymeshcreatetest.h
     include/modules/python3/processors/numpyvolume.h
     include/modules/python3/processors/pythonscriptprocessor.h
+    include/modules/python3/processortrampoline.h
     include/modules/python3/pybindutils.h
     include/modules/python3/pyportutils.h
     include/modules/python3/python3module.h
@@ -27,6 +28,7 @@ set(SOURCE_FILES
     src/processors/numpymeshcreatetest.cpp
     src/processors/numpyvolume.cpp
     src/processors/pythonscriptprocessor.cpp
+    src/processortrampoline.cpp
     src/pybindutils.cpp
     src/pyportutils.cpp
     src/python3module.cpp
@@ -78,6 +80,7 @@ target_link_libraries(inviwo-module-python3 PUBLIC
     pybind11::embed
     Python3::Python
 )
+target_compile_definitions(inviwo-module-python3 PUBLIC PYBIND11_USE_SMART_HOLDER_AS_DEFAULT)
 
 
 add_subdirectory(bindings)
