--- a/modules/dataframe/CMakeLists.txt
+++ b/modules/dataframe/CMakeLists.txt
@@ -17,6 +17,7 @@ set(HEADER_FILES
     include/inviwo/dataframe/jsondataframeconversion.h
     include/inviwo/dataframe/processors/csvsource.h
     include/inviwo/dataframe/processors/dataframeexporter.h
+    include/inviwo/dataframe/processors/dataframefilter.h
     include/inviwo/dataframe/processors/dataframefloat32converter.h
     include/inviwo/dataframe/processors/dataframejoin.h
     include/inviwo/dataframe/processors/dataframemetadata.h
@@ -51,6 +52,7 @@ set(SOURCE_FILES
     src/jsondataframeconversion.cpp
     src/processors/csvsource.cpp
     src/processors/dataframeexporter.cpp
+    src/processors/dataframefilter.cpp
     src/processors/dataframefloat32converter.cpp
     src/processors/dataframejoin.cpp
     src/processors/dataframemetadata.cpp
