--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File an issue about a bug
 title: "[BUG]: "
-labels: [T:Bug]
+labels: ["T:Bug"]
 body:
   - type: markdown
     attributes:
