--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -262,6 +262,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertywidgetfactory.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertywidgetfactoryobject.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/raycastingproperty.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/properties/selectioncolorproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/simplelightingproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/simpleraycastingproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/stringproperty.h
@@ -597,6 +598,7 @@ set(SOURCE_FILES
     properties/propertywidgetfactory.cpp
     properties/propertywidgetfactoryobject.cpp
     properties/raycastingproperty.cpp
+    properties/selectioncolorproperty.cpp
     properties/simplelightingproperty.cpp
     properties/simpleraycastingproperty.cpp
     properties/stringproperty.cpp
